<resources>
    <string name="app_name">NavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_log_out">Log Out</string>
    <string name="action_mark_as_read">Mark All As Read</string>
    <string name="action_clear_all">Clear All</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_photos">Photos</string>
    <string name="drawer_movies">Movies</string>
    <string name="drawer_notification">Notifications</string>
    <string name="drawer_settings">Settings</string>

    <string-array name="drawer_items">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_other">Other</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_privacy_policy">Privacy Policy</string>
    <string name="check_internet_title">No internet connection</string>
    <string name="check_internet_message">There is no internet connection</string>
    <string name="check_internet_settings">retry</string>
    <string name="check_internet_cancel">cancel</string>


</resources>
