<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_photo_black_24dp"
            android:title="@string/drawer_photos" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/drawer_movies" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/drawer_notification" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_settings"/>
    </group>

    <item android:title="@string/drawer_other">
        <menu>
            <item
                android:id="@+id/nav_about_us"

                android:title="@string/drawer_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"

                android:title="@string/drawer_privacy_policy" />
        </menu>
    </item>

</menu>
